--- a/PRG/RetoFinal/nbproject/project.properties
+++ b/PRG/RetoFinal/nbproject/project.properties
@@ -40,7 +40,8 @@ javac.classpath=\
     ${file.reference.commons-dbcp2-2.13.0.jar}:\
     ${file.reference.commons-pool2-2.12.1.jar}:\
     ${file.reference.commons-logging-1.3.5.jar}:\
-    ${libs.FxText.classpath}
+    ${libs.junit_4.classpath}:\
+    ${libs.TestFX.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
