--- a/PRG/RetoFinal/nbproject/project.properties
+++ b/PRG/RetoFinal/nbproject/project.properties
@@ -32,7 +32,11 @@ excludes=
 file.reference.commons-dbcp2-2.13.0.jar=src/commons-dbcp2-2.13.0.jar
 file.reference.commons-logging-1.3.5.jar=src/commons-logging-1.3.5.jar
 file.reference.commons-pool2-2.12.1.jar=src/commons-pool2-2.12.1.jar
+file.reference.hamcrest-junit-2.0.0.0.jar=src/hamcrest-junit-2.0.0.0.jar
+file.reference.java-hamcrest-2.0.0.0.jar=src/java-hamcrest-2.0.0.0.jar
 file.reference.mysql-connector-java-8.0.15.jar=src/mysql-connector-java-8.0.15.jar
+file.reference.testfx-core-4.0.13-alpha.jar=src/testfx-core-4.0.13-alpha.jar
+file.reference.testfx-junit-4.0.13-alpha.jar=src/testfx-junit-4.0.13-alpha.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -40,8 +44,10 @@ javac.classpath=\
     ${file.reference.commons-dbcp2-2.13.0.jar}:\
     ${file.reference.commons-pool2-2.12.1.jar}:\
     ${file.reference.commons-logging-1.3.5.jar}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.TestFX.classpath}
+    ${file.reference.hamcrest-junit-2.0.0.0.jar}:\
+    ${file.reference.java-hamcrest-2.0.0.0.jar}:\
+    ${file.reference.testfx-core-4.0.13-alpha.jar}:\
+    ${file.reference.testfx-junit-4.0.13-alpha.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
