--- a/PRG/RetoFinal/nbproject/project.properties
+++ b/PRG/RetoFinal/nbproject/project.properties
@@ -29,11 +29,18 @@ dist.jar=${dist.dir}/RetoCRUD_ADTyDIN.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.antlr-2.7.7.jar=src/antlr-2.7.7.jar
+file.reference.byte-buddy-1.12.22.jar=src/byte-buddy-1.12.22.jar
 file.reference.commons-dbcp2-2.13.0.jar=src/commons-dbcp2-2.13.0.jar
 file.reference.commons-logging-1.3.5.jar=src/commons-logging-1.3.5.jar
 file.reference.commons-pool2-2.12.1.jar=src/commons-pool2-2.12.1.jar
 file.reference.hamcrest-junit-2.0.0.0.jar=src/hamcrest-junit-2.0.0.0.jar
+file.reference.hibernate-core-5.6.15.Final.jar=src/hibernate-core-5.6.15.Final.jar
+file.reference.hibernate-entitymanager-5.6.15.Final.jar=src/hibernate-entitymanager-5.6.15.Final.jar
 file.reference.java-hamcrest-2.0.0.0.jar=src/java-hamcrest-2.0.0.0.jar
+file.reference.javassist-3.29.2-GA.jar=src/javassist-3.29.2-GA.jar
+file.reference.javax.persistence-api-2.2.jar=src/javax.persistence-api-2.2.jar
+file.reference.jboss-logging-3.4.3.Final.jar=src/jboss-logging-3.4.3.Final.jar
 file.reference.mysql-connector-java-8.0.15.jar=src/mysql-connector-java-8.0.15.jar
 file.reference.testfx-core-4.0.13-alpha.jar=src/testfx-core-4.0.13-alpha.jar
 file.reference.testfx-junit-4.0.13-alpha.jar=src/testfx-junit-4.0.13-alpha.jar
@@ -47,7 +54,14 @@ javac.classpath=\
     ${file.reference.hamcrest-junit-2.0.0.0.jar}:\
     ${file.reference.java-hamcrest-2.0.0.0.jar}:\
     ${file.reference.testfx-core-4.0.13-alpha.jar}:\
-    ${file.reference.testfx-junit-4.0.13-alpha.jar}
+    ${file.reference.testfx-junit-4.0.13-alpha.jar}:\
+    ${file.reference.antlr-2.7.7.jar}:\
+    ${file.reference.byte-buddy-1.12.22.jar}:\
+    ${file.reference.hibernate-core-5.6.15.Final.jar}:\
+    ${file.reference.hibernate-entitymanager-5.6.15.Final.jar}:\
+    ${file.reference.javassist-3.29.2-GA.jar}:\
+    ${file.reference.javax.persistence-api-2.2.jar}:\
+    ${file.reference.jboss-logging-3.4.3.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
