En procesoo de terminar hibernate

--- a/PRG/RetoFinal/nbproject/project.properties
+++ b/PRG/RetoFinal/nbproject/project.properties
@@ -40,6 +40,7 @@ file.reference.hibernate-entitymanager-5.6.15.Final.jar=src/hibernate-entitymana
 file.reference.java-hamcrest-2.0.0.0.jar=src/java-hamcrest-2.0.0.0.jar
 file.reference.javassist-3.29.2-GA.jar=src/javassist-3.29.2-GA.jar
 file.reference.javax.persistence-api-2.2.jar=src/javax.persistence-api-2.2.jar
+file.reference.javax.transaction-api-1.3.jar=src/javax.transaction-api-1.3.jar
 file.reference.jboss-logging-3.4.3.Final.jar=src/jboss-logging-3.4.3.Final.jar
 file.reference.mysql-connector-java-8.0.15.jar=src/mysql-connector-java-8.0.15.jar
 file.reference.testfx-core-4.0.13-alpha.jar=src/testfx-core-4.0.13-alpha.jar
@@ -61,7 +62,8 @@ javac.classpath=\
     ${file.reference.hibernate-entitymanager-5.6.15.Final.jar}:\
     ${file.reference.javassist-3.29.2-GA.jar}:\
     ${file.reference.javax.persistence-api-2.2.jar}:\
-    ${file.reference.jboss-logging-3.4.3.Final.jar}
+    ${file.reference.jboss-logging-3.4.3.Final.jar}:\
+    ${file.reference.javax.transaction-api-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
