--- a/PRG/RetoFinal/nbproject/project.properties
+++ b/PRG/RetoFinal/nbproject/project.properties
@@ -67,7 +67,8 @@ javac.classpath=\
     ${file.reference.jboss-logging-3.4.3.Final.jar}:\
     ${file.reference.javax.transaction-api-1.3.jar}:\
     ${file.reference.hibernate-commons-annotations-5.1.2.Final.jar}:\
-    ${file.reference.classmate-1.5.1.jar}
+    ${file.reference.classmate-1.5.1.jar}:\
+    ${libs.JasperReportsLib.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
