--- a/PRG/RetoFinal/nbproject/project.properties
+++ b/PRG/RetoFinal/nbproject/project.properties
@@ -69,8 +69,7 @@ javac.classpath=\
     ${file.reference.javax.transaction-api-1.3.jar}:\
     ${file.reference.hibernate-commons-annotations-5.1.2.Final.jar}:\
     ${file.reference.classmate-1.5.1.jar}:\
-    ${file.reference.src-JasperReportsLib}:\
-    ${libs.FxText.classpath}
+    ${file.reference.src-JasperReportsLib}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
